Change styling to avoid stretching cover images in lists

--- a/assets/css/extended/home.css
+++ b/assets/css/extended/home.css
@@ -13,3 +13,8 @@
 .home-info .entry-footer {
   display: none;
 }
+
+article.post-entry figure.entry-cover img {
+  margin: auto;
+  width: unset;
+}
